<resources>
    <string name="app_name">Personal Finance</string>
    <string name="hello_dear_user">Hello!</string>
    <string name="budget">Budget</string>
    <string name="transactions">Transactions</string>
    <string name="savings">Savings</string>
    <string name="future_payments">Future Payments</string>
    <string name="no_future_payments_due">No future payments due</string>
    <string name="your_budget">Your budget</string>
    <string name="home_activity_button_description">Go to home activity</string>
    <string name="expense_activity_button_description">Go to expenses activity</string>
    <string name="future_payment_activity_button_description">Go to future payments activity</string>
    <string name="edit_user_name">Edit user name</string>
    <string name="set_savings_goal">Savings goal:</string>
    <string name="saved_amount">Saved amount:</string>
    <string name="add_money">Add Money</string>
    <string name="add_future_payment">Add Future Payment</string>
    <string name="update_budget">Update Budget</string>
    <string name="edit_savings_goal">Set savings goal</string>
    <string name="monthly_budget">Monthly Budget:</string>
    <string name="current_budget">Current Budget:</string>
    <string name="spent_last_30_days">Spent last 30 days:</string>
    <string name="add_expense">Add expense</string>
    <string name ="personal_finances_logo">Personal Finances Logo</string>
    <string name="category_string">Category</string>
    <string name="description_string">Description</string>
    <string name="choose_category">Choose category</string>
    <string name="due_date_string">Due Date (YYYY-MM-DD THH-MM-SS)</string>
    <string name="select_date_time_string">Select Date and Time</string>
    <string name="save_string">Save</string>
    <string name="price_string">Price</string>
    <string name="purchase_date_string">Purchase Date</string>
</resources>