<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/medium_red">

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/choose_category"
        android:hint="@string/category_string"
        android:minHeight="48dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_string"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_string"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnSaveExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_string"
        android:layout_gravity="end" />
</LinearLayout>
