<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/medium_red">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/editCategoryForFuturePayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="text"
            android:hint="@string/category_string"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editDescriptionForFuturePayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="textMultiLine"
            android:hint="@string/description_string"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editDueDateForFuturePayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="date"
            android:hint="@string/due_date_string"
            android:focusable="false"
            android:textColor="@color/black"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>
