<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium"
    android:background="@drawable/bg_main_background">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/savings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageButton
            android:id="@+id/savings_to_main_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home"
            android:background="?attr/selectableItemBackground"
            android:onClick="goToMain"
            android:contentDescription="@string/home_activity_button_description"
            android:layout_gravity="end"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/pf_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savings_toolbar"
        app:srcCompat="@drawable/ic_pf_logo"
        android:contentDescription="@string/personal_finances_logo"/>

    <TextView
        android:id="@+id/savings_goal"
        android:layout_width="208dp"
        android:layout_height="83dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:background="@color/medium_red"
        android:fontFamily="cursive"
        android:padding="8dp"
        android:text="@string/set_savings_goal"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pf_logo" />

    <TextView
        android:id="@+id/saved_amount"
        android:layout_width="208dp"
        android:layout_height="83dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:background="@color/medium_red"
        android:fontFamily="cursive"
        android:padding="8dp"
        android:text="@string/saved_amount"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savings_goal" />

    <Button
        android:id="@+id/add_money_button"
        android:layout_width="250dp"
        android:layout_height="86dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:background="@color/medium_red"
        android:fontFamily="cursive"
        android:text="@string/add_money"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saved_amount" />

    <ImageButton
        android:id="@+id/set_savings_goal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/edit_savings_goal"
        app:layout_constraintStart_toEndOf="@+id/savings_goal"
        app:layout_constraintTop_toBottomOf="@+id/pf_logo"
        app:srcCompat="@android:drawable/ic_menu_edit" />


</androidx.constraintlayout.widget.ConstraintLayout>