<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium"
    android:background="@drawable/bg_main_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/greeting_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:fontFamily="cursive"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <ImageButton
        android:id="@+id/edit_name_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toEndOf="@+id/greeting_textview"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/edit_user_name"/>

    <Button
        android:id="@+id/budgetButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:drawableLeft="@drawable/ic_budget"
        android:drawablePadding="@dimen/padding_medium"
        android:fontFamily="cursive"
        android:text="@string/budget"
        android:onClick="goToBudget"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_large"
        android:backgroundTint="@color/yellow_canary"
        app:layout_constraintBottom_toTopOf="@+id/transactionsButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/transactionsButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:drawableLeft="@drawable/ic_transaction"
        android:fontFamily="cursive"
        android:text="@string/transactions"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_large"
        android:onClick="goToTransactions"
        android:backgroundTint="@color/yellow_canary"
        app:layout_constraintBottom_toTopOf="@+id/savingsButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/savingsButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="30dp"
        android:drawableLeft="@drawable/ic_savings"
        android:fontFamily="cursive"
        android:text="@string/savings"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_large"
        android:onClick="goToSavings"
        android:backgroundTint="@color/yellow_canary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:srcCompat="@drawable/pf_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>
